@@ -12,7 +12,6 @@
  */
 package org.openhab.binding.opengarage.internal;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -41,5 +40,5 @@ public class OpenGarageBindingConstants {
     public static final String CHANNEL_OG_VEHICLE = "vehicle"; // now deprecated
     public static final String CHANNEL_OG_VEHICLE_STATUS = "vehicle-status";
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.singleton(OPENGARAGE_THING);
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(OPENGARAGE_THING);
 }
